# rag_service

./: .gitignore  README.md  alembic.ini  env.example  pyproject.toml  pytest.ini  setup.cfg
app/: __init__.py  main.py
app/api/endpoints/: auth.py  chat.py  status.py  upload.py
app/config/: config.py
app/db/: database.py
app/models/: models.py
app/rag/: embedding.py  llm.py  rag_service.py  text_splitter.py  vectorstore.py
app/schemas/: schemas.py
app/utils/: auth.py  logger.py
docker/: .dockerignore  Dockerfile  Dockerfile.prod  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  nginx.conf  start.sh
migration/: env.py
migration/versions/: 8e27ac046405_initial_migration.py
tests/: conftest.py  test_auth.py  test_chat.py  test_rag_service.py  test_schemas.py  test_upload.py
