[project]
name = "top-ai-kouch"
version = "0.1.0"
description = ""
authors = [
    {name = "alex",email = "alex@alex.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "openai (>=1.97.1,<2.0.0)",
    "qdrant-client (>=1.15.0,<2.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bcrypt (>=3.2.0,<4.1.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "torchaudio (>=2.5.1,<3.0.0)"
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchvision = {source = "pytorch"}
torchaudio = {source = "pytorch"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
